--- a/Reports/Spark/ExtentSpark.html
+++ b/Reports/Spark/ExtentSpark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MSIL DMC POC Automation Test Suite Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 7, 2024 03:40:33 pm</span></a>
+<a href="#"><span class="badge badge-primary">Mar 21, 2024 12:26:26 pm</span></a>
 </li>
 </ul>
 </div>
@@ -57,11 +57,6 @@
 <span class="ico"><i class="fa fa-tag"></i></span>
 </a>
 </li>
-<li class="nav-item dropdown" onclick="toggleView('exception-view')">
-<a id="nav-exception" class="dropdown-toggle" href="#">
-<span class="ico"><i class="fa fa-bug"></i></span>
-</a>
-</li>
 </ul>
 </div>
 </div>      <div class="vcontainer">
@@ -71,25 +66,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 7, 2024 03:40:33 pm</h3>
+<h3>Mar 21, 2024 12:26:26 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 7, 2024 03:41:40 pm</h3>
+<h3>Mar 21, 2024 12:27:46 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 </div>
@@ -105,12 +100,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'>
-<b>0</b> features passed
+<div><small data-tooltip='100%'>
+<b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='100%'><b>1</b> features failed,
+<small data-tooltip='0%'><b>0</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -128,9 +123,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='100%'><b>1</b> scenarios failed,
+<small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -148,9 +143,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='95%'><b>20</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
 <div>
-<small data-tooltip='4%'><b>1</b> steps failed,
+<small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -167,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"MSIL User Reports":64.633
+"Dealer - Sales Register Report":79.079
 };
 </script>
 <div class="row">
@@ -177,20 +172,20 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@Report1</td>
-<td>0</td>
+<td>@DealerReport1</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0%</td>
+<td>0</td>
+<td>100%</td>
 </tr>
 <tr>
-<td>@MSILReport</td>
-<td>0</td>
+<td>@DealerReport</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0%</td>
+<td>0</td>
+<td>100%</td>
 </tr>
 </tbody>
 </table></div>
@@ -223,19 +218,19 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 0,
-failParent: 1,
+passParent: 1,
+failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 0,
-failChild: 1,
+passChild: 1,
+failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 20,
-failGrandChild: 1,
+passGrandChild: 15,
+failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
@@ -251,7 +246,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
+<a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -259,31 +254,31 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@Report1</a><a class="dropdown-item" href="#">@MSILReport</a>
+<a class="dropdown-item" href="#">@DealerReport1</a><a class="dropdown-item" href="#">@DealerReport</a>
 </ul>
 </li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="1"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">MSIL User Reports</p>
+            <p class="name">Dealer - Sales Register Report</p>
             <p class="text-sm">
-              <span>3:40:36 pm</span> / <span>00:01:04:633</span>
-              <span class="badge fail-bg log float-right">Fail</span>
+              <span>12:26:27 pm</span> / <span>00:01:19:079</span>
+              <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">MSIL User Reports</h5>
-<span class='badge badge-success'>03.07.2024 3:40:36 pm</span>
-<span class='badge badge-danger'>03.07.2024 3:41:40 pm</span>
-<span class='badge badge-default'>00:01:04:633</span>
+<h5 class="test-status text-pass">Dealer - Sales Register Report</h5>
+<span class='badge badge-success'>03.21.2024 12:26:27 pm</span>
+<span class='badge badge-danger'>03.21.2024 12:27:46 pm</span>
+<span class='badge badge-default'>00:01:19:079</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -295,30 +290,29 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Validate Sales Register Report submit functionality</div>
-          <div class="status-avatar float-right mr-4">
-            <i class="fa fa-paperclip"></i>
-          </div>
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Validate Sales Register Report submit functionality</div>
       </div>
     </div>
-        <div class="scenario_outline ">
+        <div class="scenario_outline collapse">
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>Validate Sales Register Report submit functionality</div>
-                    <div class="status-avatar float-right">
-                      <i class="fa fa-paperclip"></i>
-                    </div>
+                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>Validate Sales Register Report submit functionality</div>
                 </div>
               </div>
-              <div class="card-body mt-3 ">
+              <div class="card-body mt-3 collapse">
                   <div class="step pass-bg">
                     <span>Given User is on Login Page</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User clicks on "MSIL User" button</span>
+                    <span>And User clicks on "Dealer" button</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And User enters "677272" and "5555"</span>
       <div>
       </div>
                   </div>
@@ -328,17 +322,7 @@ eventsCount: 5,
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And User enters MSIL "Maruti\267597" and "Bobo@8901"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User click on Sign in button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Given user is on the Online Report Landing page</span>
+                    <span>Given User is on Home Page</span>
       <div>
       </div>
                   </div>
@@ -349,26 +333,6 @@ eventsCount: 5,
                   </div>
                   <div class="step pass-bg">
                     <span>And user selects Sales Register Report</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Zone as "CENTRAL"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Region as "C2"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Dealer as "PREM MOTOR" and "GRN"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Channel as "NRM"</span>
       <div>
       </div>
                   </div>
@@ -407,30 +371,8 @@ eventsCount: 5,
       <div>
       </div>
                   </div>
-                  <div class="step fail-bg">
-                    <span>And user validates the MSIL sales register report from "01-11-2023" to "30-11-2023","Invoiced","PREM MOTOR","GRN","C2","NRM"</span>
-      <div>
-        <textarea disabled class="code-block">java.lang.IndexOutOfBoundsException: Index 0 out of bounds for length 0
-	at java.base/jdk.internal.util.Preconditions.outOfBounds(Preconditions.java:64)
-	at java.base/jdk.internal.util.Preconditions.outOfBoundsCheckIndex(Preconditions.java:70)
-	at java.base/jdk.internal.util.Preconditions.checkIndex(Preconditions.java:266)
-	at java.base/java.util.Objects.checkIndex(Objects.java:361)
-	at java.base/java.util.ArrayList.get(ArrayList.java:427)
-	at com.dms.dbconfig.Query.get_order_count_for_sales_register_report_MSIL(Query.java:501)
-	at com.dms.stepdefinitions.ReportsStepDef.user_validates_the_MSIL_sales_register_report(ReportsStepDef.java:340)
-	at ✽.user validates the MSIL sales register report from "01-11-2023" to "30-11-2023","Invoiced","PREM MOTOR","GRN","C2","NRM"(file:///C:/Users/sprakash01/ProjectFiles/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/ReportMSIL.feature:27)
-</textarea>
-      
-      </div>
-                  </div>
                   <div class="step pass-bg">
-                    <span>com.dms.apphooks.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
-      <div>Validate_Sales_Register_Report_submit_functionality
-          <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='../FailedScreenShots/embedded1.png' src="../FailedScreenShots/embedded1.png">
-    
-    </div></div>
-</div>
+                    <span>And user validates the dealer sales register report from "01-11-2023" to "30-11-2023" and "Invoiced"</span>
       <div>
       </div>
                   </div>
@@ -461,15 +403,15 @@ eventsCount: 5,
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log badge-danger'>1</span>
+<span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@Report1</p>
+<p class="name">@DealerReport1</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@Report1</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
+<h4>@DealerReport1</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -480,13 +422,13 @@ eventsCount: 5,
 </tr>
 </thead>
 <tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>15:40:36 pm</td>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>12:26:27 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='3'>Validate Sales Register Report submit functionality</a>
 <div class="">
-<span class="badge badge-default">MSIL User Reports.Validate Sales Register Report submit functionality</span>
+<span class="badge badge-default">Dealer - Sales Register Report.Validate Sales Register Report submit functionality</span>
 </div>
 </td>
 </tr>
@@ -497,15 +439,15 @@ eventsCount: 5,
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log badge-danger'>1</span>
+<span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">@MSILReport</p>
+<p class="name">@DealerReport</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@MSILReport</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
+<h4>@DealerReport</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -516,65 +458,13 @@ eventsCount: 5,
 </tr>
 </thead>
 <tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>15:40:36 pm</td>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>12:26:27 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='3'>Validate Sales Register Report submit functionality</a>
 <div class="">
-<span class="badge badge-default">MSIL User Reports.Validate Sales Register Report submit functionality</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="test-content scrollable">
-<div class="test-content-detail">
-<div class="detail-body"></div>
-</div>
-</div>
-</div><div class="test-wrapper row view exception-view attributes-view">
-<div class="test-list">
-<div class="test-list-tools">
-<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
-</div>
-<div class="test-list-wrapper scrollable">
-<ul class="test-list-item">
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-danger'>1</span>
-</span>
-<p class="name">java.lang.IndexOutOfBoundsException</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>java.lang.IndexOutOfBoundsException</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>15:41:22 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='25'>And user validates the MSIL sales register report from "01-11-2023" to "30-11-2023","Invoiced","PREM MOTOR","GRN","C2","NRM"</a>
-<div class="">
-<span class="badge badge-default">MSIL User Reports.Validate Sales Register Report submit functionality.And user validates the MSIL sales register report from "01-11-2023" to "30-11-2023","Invoiced","PREM MOTOR","GRN","C2","NRM"</span>
+<span class="badge badge-default">Dealer - Sales Register Report.Validate Sales Register Report submit functionality</span>
 </div>
 </td>
 </tr>
